--- a/app/src/main/res/layout/layout_actionbar.xml
+++ b/app/src/main/res/layout/layout_actionbar.xml
@@ -9,6 +9,7 @@
         android:layout_height="wrap_content"
         android:orientation="vertical"
         android:layout_centerVertical="true"
+        android:background="@color/color_red"
         android:layout_marginLeft="10dp">
 
         <ImageButton
@@ -50,6 +51,7 @@
         android:orientation="vertical"
         android:layout_alignParentRight="true"
         android:layout_centerVertical="true"
+        android:background="@color/color_red"
         android:layout_marginRight="10dp">
 
         <ImageButton
