--- a/app/src/main/res/layout/layout_actionbar_setting.xml
+++ b/app/src/main/res/layout/layout_actionbar_setting.xml
@@ -8,6 +8,7 @@
         android:layout_height="wrap_content"
         android:orientation="vertical"
         android:layout_centerVertical="true"
+        android:background="@color/color_red"
         android:layout_marginLeft="10dp">
 
         <TextView
