--- a/app/src/main/res/layout/layout_actionbar.xml
+++ b/app/src/main/res/layout/layout_actionbar.xml
@@ -18,7 +18,7 @@
             android:textAlignment="center"
             android:gravity="center"
             android:text="@string/bluetooth"
-            android:textColor="@android:color/white"/>
+            android:textColor="@color/color_red"/>
     </LinearLayout>
 
     <TextView
